# codelens

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
benchmarks/: results.md
codelens/: __init__.py  api.py  chunker.py  cli.py  db.py  embedder.py  ingest.py  pipeline.py  reranker.py  vector_index.py
scripts/: benchmark.py
tests/: test_api.py  test_benchmark_smoke.py  test_chunker.py  test_cli.py  test_db.py  test_embedder.py  test_ingest.py  test_ingest_remote.py  test_pipeline.py  test_reranker.py  test_smoke.py  test_vector_index.py
